# c-practice

./: .gdb_history  README.md
c/advent-code-2023/day1/: day1  day1.c  test.sh
c/advent-code-2023/day2/: day2  day2.c  test.sh
c/modern-approach-projects/chap2/: .gdb_history  q1  q1.c  q2  q2.c  q3  q3.c  q4  q4.c  q5  q5.c  q6  q6.c  q7  q7.c  q8  q8.c
c/modern-approach-projects/chap3/: q1  q1.c  q2  q2.c  q3  q3.c  q4  q4.c  q5  q5.c  q6  q6.c
c/modern-approach-projects/chap4/: q1  q1.c  q2  q2.c  q3  q3.c  q4  q4.c  q5  q5.c  q6  q6.c
c/modern-approach-projects/chap5/: q1  q1.c  q10  q10.c  q11  q11.c  q2  q2.c  q3  q3.c  q4  q4.c  q5  q5.c  q6  q6.c  q7  q7.c  q8  q8.c  q9  q9.c
c/modern-approach-projects/chap6/: .gdb_history  q1  q1.c  q10  q10.c  q11  q11.c  q12  q12.c  q2  q2.c  q3  q3.c  q4  q4.c  q5  q5.c  q6  q6.c  q7  q7.c  q8  q8.c  q9  q9.c
c/modern-approach-projects/chap7/: q1  q1.c  q10  q10.c  q11  q11.c  q12  q12.c  q13  q13.c  q14  q14.c  q15  q15.c  q2  q2.c  q3  q3.c  q4  q4.c  q5  q5.c  q6  q6.c  q7  q7.c  q8.c  q9  q9.c
c/project1/: client  client.c  server  server.c
c/project2/: index.html  server  server.c
cpp/double/: Main.cpp  main
first/: first  first.cpp
simple-calculator/: .gdb_history  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  calc  calc.cpp  cmake_install.cmake  simpleCalc
simple-calculator/src/: Add.cpp  Main.cpp
